--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "godown": "1.0.5",
+    "godown": "^1.0.42",
     "next": "^13.0.6",
     "nextra": "2.0.1",
     "nextra-theme-docs": "^2.0.2",
