--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.3.0",
     "godown": "^1.0.42",
-    "next": "^13.0.6",
-    "nextra": "2.0.1",
-    "nextra-theme-docs": "^2.0.2",
+    "next": "^13.4.4",
+    "nextra": "^2.6.1",
+    "nextra-theme-docs": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
+    "@types/react": "18.2.7",
     "typescript": "^4.9.3"
   }
 }
