--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
-    "godown": "^1.0.42",
-    "next": "^13.4.4",
-    "nextra": "^2.6.1",
-    "nextra-theme-docs": "^2.6.1",
+    "godown": "^1.0.48",
+    "next": "^13.4.6",
+    "nextra": "^2.7.1",
+    "nextra-theme-docs": "^2.7.1",
+    "powerstyl": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
